--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            KnTricks
-description:      "Blogging is fun"
+description:      "My Tech Blog"
 logo:             logo.png
-disqus_shortname: hmfaysal
+disqus_shortname: knadikari
 share:            true
 dropcap:			true
 # Change url to your domain. Leave localhost server or blank when working locally.
@@ -11,18 +11,18 @@ url:        	  /knadikari.github.io
 
 # Owner/author information
 owner:
-  name:           Hossain Mohd Faysal
+  name:           Kushan Nadeesha Adikari
   avatar:         hmfaysal.jpg
-  email:          hmfaysal@alum.mit.edu
+  email:          knadikari@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Awesome Dude, Awesome Life
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        hmfaysal
-  facebook:       hmfaysal
-  github:         hmfaysal      
-  instagram:      hmfaysal
+  #twitter:        hmfaysal
+  facebook:       kushan.adikari.9
+  github:         knadikari     
+  #instagram:      hmfaysal
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    https://plus.google.com/u/0/102602916593522619858
+  google_plus:    https://plus.google.com/u/0/110201499497063894707
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:   UA-39365944-7
@@ -71,8 +71,8 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://hmfaysal.github.io/Notepad/'
-  relativeLinks: 'http://hmfaysal.github.io/Notepad/links.jsonp'
+  siteurl: 'https://knadikari.github.io/'
+  relativeLinks: 'https://knadikari.github.io/links.jsonp'
   media: 'images'
   metadata:
     _posts:
