--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url:        	  /knadikari.github.io
 # Owner/author information
 owner:
   name:           Kushan Nadeesha Adikari
-  avatar:         hmfaysal.jpg
+  avatar:         my.jpg
   email:          knadikari@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Awesome Dude, Awesome Life
