--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ links:
     url: /featured
   - title: Categories
     url: /categories
-  - title: About
-    url: /about
+  #- title: About
+   # url: /about
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Dhaka
